<resources>
    <string name="app_name">BlueStock</string>
    <string name="stock_name">Nama Saham</string>
    <string name="description">Description</string>
    <string name="my_email">setyoadisasono@gmail.com</string>
    <string name="my_name">Setyo Adi Sasono</string>
    <string name="about">About Me</string>
    <string name="company_name">Nama Perusahaan</string>
    <string name="company_profile">Profil Perusahaan</string>
    <string name="detail">Detail</string>
    <string name="share">SHARE</string>
    <string-array name="data_name">
        <item>ANTM</item>
        <item>ARTO</item>
        <item>ASSI</item>
        <item>BBCA</item>
        <item>BBNI</item>
        <item>BBRI</item>
        <item>BMRI</item>
        <item>BUKA</item>
        <item>GOTO</item>
        <item>TLKM</item>
    </string-array>
    <string-array name="data_description">
        <item>Aneka Tambang Tbk.</item>
        <item>Bank Jago Tbk.</item>
        <item>Astra International Tbk.</item>
        <item>Bank Central Asia Tbk</item>
        <item>Bank Negara Indonesia (Persero) Tbk.</item>
        <item>Bank Rakyat Indonesia (Persero) Tbk.</item>
        <item>Bank Mandiri (Persero) Tbk.</item>
        <item>Bukalapak.com Tbk.</item>
        <item>GoTo Gojek Tokopedia Tbk.</item>
        <item>Telkom Indonesia (Persero) Tbk.</item>
    </string-array>
</resources>